# pytest-jsonschema

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: changelog.yml  ci.yml  lint.yml
docs/: towncrier_template.jinja
news/: +6.internal  +schemas.feature  1.feature  2.feature  3.feature  4.documentation  5.bugfix  8.bugfix
src/pytest_jsonschema/: __init__.py  fixtures.py  loaders.py  types.py  validator.py
src/pytest_jsonschema/schemas/: __init__.py  ansible-vars.json  ansible.json  docker-compose.json  github-action.json  github-funding.json  github-issue-config.json  github-issue-forms.json  github-workflow.json  gitlab-ci.json  package.json  pre-commit-config.json  pre-commit-hooks.json  prettierrc.json  pyproject.json  tsconfig.json
src/pytest_jsonschema/utils/: update_schema.py
tests/: conftest.py  test_fixtures.py  test_jsonschema.py  test_validator.py
tests/resources/invalid/: github-workflow-changelog.yml  github-workflow-code.yml  github-workflow-lint.yml  package.json  pyproject.toml  tsconfig.json
tests/resources/valid/: github-workflow-code.yml  package.json  pyproject.toml
